# practice_projects

./: README.md  Store_Project.java  sorting.java
LIFE/: README.md  pyproject.toml
LIFE/images/: jmd18_gif.gif.crdownload
LIFE/src/life/: life.py
MarketTracker/: Program.cs  main.cs
MarketTracker/Models/: Ticker.cs
MarketTracker/Services/: PriceFetcher.cs
MarketTracker/UI/: MainForm.cs
MarketTracker/Utils/: Notifier.cs
card_game_project/: cardGame.py
pokemon_python/classes/: Mons.py  Moves.py  Types.py
pokemon_remake/classes/: Mon.java  MonData.java
pokemon_remake/classes/Types/: Bug.java  Dark.java  Electric.java  Fairy.java  Fighting.java  Fire.java  Flying.java  Ghost.java  Grass.java  Ground.java  Ice.java  Normal.java  Poison.java  Psychic.java  Rock.java  Steel.java  Types.java  Water.java
store_class_project/: Store_Project.java
